fix overflow issue on IE

--- a/baze.modal.css
+++ b/baze.modal.css
@@ -86,6 +86,7 @@
     width: 20px;
     height: 20px;
     border: 0;
+    overflow: hidden;
     text-indent: -200px;
     color: #888;
     background: none;
